// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Reel renders child images correctly with custom height 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  height: 10vh;
}

.c0::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c0::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 > * {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0 > img {
  height: 100%;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: auto;
}

.c0 > * + * {
  margin-left: 1rem;
}

<div
  className="c0"
  height="10vh"
>
  <img
    alt="Test 0"
    src=""
  />
  <img
    alt="Test 1"
    src=""
  />
  <img
    alt="Test 2"
    src=""
  />
  <img
    alt="Test 3"
    src=""
  />
  <img
    alt="Test 4"
    src=""
  />
  <img
    alt="Test 5"
    src=""
  />
  <img
    alt="Test 6"
    src=""
  />
  <img
    alt="Test 7"
    src=""
  />
  <img
    alt="Test 8"
    src=""
  />
  <img
    alt="Test 9"
    src=""
  />
</div>
`;

exports[`Reel renders child list items correctly 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  height: auto;
}

.c0::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c0::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 > * {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0 > img {
  height: 100%;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: auto;
}

.c0 > * + * {
  margin-left: 1rem;
}

<ul
  className="c0"
>
  <li>
    Item 
    0
  </li>
  <li>
    Item 
    1
  </li>
  <li>
    Item 
    2
  </li>
  <li>
    Item 
    3
  </li>
  <li>
    Item 
    4
  </li>
  <li>
    Item 
    5
  </li>
  <li>
    Item 
    6
  </li>
  <li>
    Item 
    7
  </li>
  <li>
    Item 
    8
  </li>
  <li>
    Item 
    9
  </li>
</ul>
`;

exports[`Reel renders with custom space 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  height: auto;
}

.c0::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c0::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 > * {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0 > img {
  height: 100%;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: auto;
}

.c0 > * + * {
  margin-left: 30px;
}

<div
  className="c0"
>
  <div>
    Item 
    0
  </div>
  <div>
    Item 
    1
  </div>
  <div>
    Item 
    2
  </div>
  <div>
    Item 
    3
  </div>
  <div>
    Item 
    4
  </div>
  <div>
    Item 
    5
  </div>
  <div>
    Item 
    6
  </div>
  <div>
    Item 
    7
  </div>
  <div>
    Item 
    8
  </div>
  <div>
    Item 
    9
  </div>
</div>
`;

exports[`Reel renders with defaults 1`] = `
.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow-x: auto;
  overflow-y: hidden;
  -webkit-overflow-scrolling: touch;
  -webkit-scrollbar-width: none;
  -moz-scrollbar-width: none;
  -ms-scrollbar-width: none;
  scrollbar-width: none;
  -ms-overflow-style: -ms-autohiding-scrollbar;
  height: auto;
}

.c0::-webkit-scrollbar {
  width: 12px;
  height: 12px;
  cursor: pointer;
}

.c0::-webkit-scrollbar-thumb {
  background-color: transparent;
  background-clip: content-box;
  border-radius: 100px;
  border: 3px solid transparent;
}

.c0:hover::-webkit-scrollbar-thumb {
  background-color: #62676D;
}

.c0 > li {
  list-style-type: none;
}

.c0 > li:before {
  position: absolute;
  content: "\\200B";
}

.c0 > * {
  -webkit-flex: 0 0 auto;
  -ms-flex: 0 0 auto;
  flex: 0 0 auto;
}

.c0 > img {
  height: 100%;
  -webkit-flex-basis: auto;
  -ms-flex-preferred-size: auto;
  flex-basis: auto;
  width: auto;
}

.c0 > * + * {
  margin-left: 1rem;
}

<div
  className="c0"
>
  <div>
    Item 
    0
  </div>
  <div>
    Item 
    1
  </div>
  <div>
    Item 
    2
  </div>
  <div>
    Item 
    3
  </div>
  <div>
    Item 
    4
  </div>
  <div>
    Item 
    5
  </div>
  <div>
    Item 
    6
  </div>
  <div>
    Item 
    7
  </div>
  <div>
    Item 
    8
  </div>
  <div>
    Item 
    9
  </div>
</div>
`;
